--- a/fontend-new/src/modules/nav/nav.html
+++ b/fontend-new/src/modules/nav/nav.html
@@ -1,5 +1,51 @@
- <header ng-controller="navCtrl">
-     <a ui-sref="hello" ui-sref-active="active">Hello</a>
-     <a ui-sref="plan" ui-sref-active="active">plan</a>
- </header>
 
+
+ <nav class="navbar navbar-default" role="navigation"  ng-controller="navCtrl">
+     <div class="container-fluid">
+         <!-- Brand and toggle get grouped for better mobile display -->
+         <div class="navbar-header">
+             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+             </button>
+             <a class="navbar-brand" href="#">super trader </a>
+         </div>
+
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+             <ul class="nav navbar-nav">
+                 <li class="active"><a ui-sref="dashboard" ui-sref-active="active" >dashboard</a></li>
+
+                 <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
+                     <ul class="dropdown-menu" role="menu">
+
+                         <li><a href="#">Account 1</a></li>
+                         <li><a href="#">Account 2</a></li>
+                         <li class="divider"></li>
+                         <li><a href="#">account management</a></li>
+                     </ul>
+                 </li>
+
+                 <li><a ui-sref="strategy" ui-sref-active="active" >Strategy</a></li>
+
+             </ul>
+
+             <ul class="nav navbar-nav navbar-right">
+
+                 <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
+                     <ul class="dropdown-menu" role="menu">
+                         <li><a href="#">Symbol</a></li>
+                         <li><a href="#">Another action</a></li>
+                         <li><a href="#">Something else here</a></li>
+                         <li class="divider"></li>
+                         <li><a href="#">Separated link</a></li>
+                     </ul>
+                 </li>
+             </ul>
+         </div><!-- /.navbar-collapse -->
+     </div><!-- /.container-fluid -->
+ </nav>
