--- a/fontend-new/src/index.html
+++ b/fontend-new/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width;initial-scale=1">
     <title></title>
-    <link type="text/css" rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link type="text/css" rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+    <link type="text/css" rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" />
 
 
 </head>
@@ -25,15 +25,19 @@
 
  </div>
 
-<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="vendor/chart.js/dist/Chart.min.js"></script>
 
-<script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-<script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script type="text/javascript" src="vendor/angular/angular.js"></script>
+<script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="app.js"></script>
+ <script type="text/javascript" src="constants.js"></script>
+ <script type="text/javascript" src="routeConfig.js"></script>
+ <script type="text/javascript" src="app.js"></script>
  <script type="text/javascript" src="directives/strategyForm/strategyForm.js"></script>
  <script type="text/javascript" src="directives/strategyTable/strategyTable.js"></script>
-
+ <script type="text/javascript" src="modules/dashboard/dashboard.js"></script>
 <script type="text/javascript" src="modules/nav/nav.js"></script>
 <script type="text/javascript" src="modules/plan/plan.js"></script>
  <script type="text/javascript" src="modules/strategy/strategy.js"></script>
