--- a/fontend-new/src/directives/strategyForm/strategyForm.html
+++ b/fontend-new/src/directives/strategyForm/strategyForm.html
@@ -8,6 +8,10 @@
                 <input type="text" class="form-control">
             </div>
             <div class="form-group">
+                <label>description:</label>
+                <textarea    class="form-control"></textarea>
+            </div>
+            <div class="form-group">
                 <button class="btn btn-default">save</button>
             </div>
         </form>
@@ -16,12 +20,13 @@
 <div class="panel panel-default">
     <div class="panel-heading">trade  method</div>
     <div class="panel-body">
-
+         <button class="btn btn-default">add </button>
         <table class="table">
             <thead>
             <tr>
                 <th>id</th>
                 <th>name</th>
+                <th>action</th>
             </tr>
             </thead>
             <tbody>
