--- a/fontend-new/src/modules/nav/nav.html
+++ b/fontend-new/src/modules/nav/nav.html
@@ -36,13 +36,12 @@
              <ul class="nav navbar-nav navbar-right">
 
                  <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">configuration <span class="caret"></span></a>
                      <ul class="dropdown-menu" role="menu">
-                         <li><a href="#">Symbol</a></li>
-                         <li><a href="#">Another action</a></li>
-                         <li><a href="#">Something else here</a></li>
-                         <li class="divider"></li>
-                         <li><a href="#">Separated link</a></li>
+                         <li><a href="#">symbol</a></li>
+
+
+                         <li><a href="#">profile</a></li>
                      </ul>
                  </li>
              </ul>
