--- a/fontend-new/src/index.html
+++ b/fontend-new/src/index.html
@@ -25,9 +25,9 @@
 
  </div>
 
-<script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="vendor/chart.js/dist/Chart.min.js"></script>
+<script type="text/javascript" src="vendor/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="vendor/chart.js/dist/Chart.js"></script>
 
 <script type="text/javascript" src="vendor/angular/angular.js"></script>
 <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
@@ -37,9 +37,13 @@
 
  <script type="text/javascript" src="directives/strategyForm/strategyForm.js"></script>
  <script type="text/javascript" src="directives/strategyTable/strategyTable.js"></script>
+
+
  <script type="text/javascript" src="modules/dashboard/dashboard.js"></script>
 <script type="text/javascript" src="modules/nav/nav.js"></script>
 <script type="text/javascript" src="modules/plan/plan.js"></script>
  <script type="text/javascript" src="modules/strategy/strategy.js"></script>
+
+ <script type="text/javascript" src="modules/login/login.js"></script>
 </body>
 </html>
