--- a/fontend-new/src/index.html
+++ b/fontend-new/src/index.html
@@ -43,7 +43,8 @@
 <script type="text/javascript" src="modules/nav/nav.js"></script>
 <script type="text/javascript" src="modules/plan/plan.js"></script>
  <script type="text/javascript" src="modules/strategy/strategy.js"></script>
-
+ <script type="text/javascript" src="modules/symbol/symbol.js"></script>
  <script type="text/javascript" src="modules/login/login.js"></script>
+<script type="text/javascript" src="modules/account/accountManage.js"></script>
 </body>
 </html>
