--- a/fontend-new/src/modules/nav/nav.html
+++ b/fontend-new/src/modules/nav/nav.html
@@ -25,11 +25,11 @@
                          <li><a href="#">Account 1</a></li>
                          <li><a href="#">Account 2</a></li>
                          <li class="divider"></li>
-                         <li><a href="#">account management</a></li>
+                         <li><a ui-sref="accountManage" ui-sref-active="active" >account Manage</a></li>
                      </ul>
                  </li>
 
-                 <li><a ui-sref="strategy" ui-sref-active="active" >Strategy</a></li>
+                 <li><a ui-sref="strategy" >Strategy</a></li>
 
              </ul>
 
@@ -38,10 +38,10 @@
                  <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">configuration <span class="caret"></span></a>
                      <ul class="dropdown-menu" role="menu">
-                         <li><a href="#">symbol</a></li>
 
+                         <li><a ui-sref="symbol">symbol</a></li>
+                         <li><a ui-sref="profile">profile</a></li>
 
-                         <li><a href="#">profile</a></li>
                      </ul>
                  </li>
              </ul>
