add symbol data service
add symbol data service

--- a/fontend-new/src/index.html
+++ b/fontend-new/src/index.html
@@ -38,6 +38,7 @@
  <script type="text/javascript" src="directives/strategyForm/strategyForm.js"></script>
  <script type="text/javascript" src="directives/strategyTable/strategyTable.js"></script>
 
+<script type="text/javascript" src="services/symbolDataService.js"></script>
 
  <script type="text/javascript" src="modules/dashboard/dashboard.js"></script>
 <script type="text/javascript" src="modules/nav/nav.js"></script>
