--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -39,11 +39,14 @@
  <script type="text/javascript" src="directives/strategyTable/strategyTable.js"></script>
 
 <script type="text/javascript" src="services/symbolDataService.js"></script>
+ <script type="text/javascript" src="services/queryService.js"></script>
+
 
  <script type="text/javascript" src="modules/dashboard/dashboard.js"></script>
 <script type="text/javascript" src="modules/nav/nav.js"></script>
 <script type="text/javascript" src="modules/plan/plan.js"></script>
- <script type="text/javascript" src="modules/strategy/strategy.js"></script>
+ <script type="text/javascript" src="modules/strategy/strategyCtrl.js"></script>
+ <script type="text/javascript" src="modules/strategy/strategyEditCtrl.js"></script>
  <script type="text/javascript" src="modules/symbol/symbol.js"></script>
  <script type="text/javascript" src="modules/login/login.js"></script>
 <script type="text/javascript" src="modules/account/accountManage.js"></script>
