--- a/frontend/src/modules/plan/plan.html
+++ b/frontend/src/modules/plan/plan.html
@@ -1,3 +1,15 @@
-<div class="page-container" ng-controller="planCtrl">
-    <h1>{{title}}</h1>
+<div class="container">
+   <div class="row">
+       <div class="panel panel-default">
+           <div class="panel-heading">active plan</div>
+           <div class="panel-body"></div>
+       </div>
+   </div>
+    <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-heading">plan statics</div>
+            <div class="panel-body"></div>
+        </div>
+    </div>
+
 </div>
