--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -45,6 +45,7 @@
  <script type="text/javascript" src="modules/dashboard/dashboard.js"></script>
 <script type="text/javascript" src="modules/nav/nav.js"></script>
 <script type="text/javascript" src="modules/plan/plan.js"></script>
+ <script type="text/javascript" src="modules/plan/planEditCtrl.js"></script>
  <script type="text/javascript" src="modules/strategy/strategyCtrl.js"></script>
  <script type="text/javascript" src="modules/strategy/strategyEditCtrl.js"></script>
  <script type="text/javascript" src="modules/symbol/symbol.js"></script>
