--- a/frontend/src/modules/nav/nav.html
+++ b/frontend/src/modules/nav/nav.html
@@ -22,8 +22,8 @@
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
                      <ul class="dropdown-menu" role="menu">
 
-                         <li><a href="#">Account 1</a></li>
-                         <li><a href="#">Account 2</a></li>
+                         <li><a href="#/plan?accountId=1">Account 1</a></li>
+                         <li><a href="#/plan?accountId=2">Account 2</a></li>
                          <li class="divider"></li>
                          <li><a ui-sref="accountManage" ui-sref-active="active" >account Manage</a></li>
                      </ul>
