--- a/frontend/src/modules/plan/plan.html
+++ b/frontend/src/modules/plan/plan.html
@@ -1,15 +1,111 @@
 <div class="container">
    <div class="row">
-       <div class="panel panel-default">
-           <div class="panel-heading">active plan</div>
+       <div class="col-lg-3 col-md-3">
+           <div class="panel panel-default">
+               <div class="panel-heading">account 1</div>
+               <div class="panel-body">
+                   <h2> risk:900</h2>
+                   <h4>last updated :2015-11-11</h4>
+                   <ul>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li><li>
+                       <a>USDJPY:100pips</a>
+                   </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+                       <li>
+                           <a>USDJPY:100pips</a>
+                       </li>
+
+
+                   </ul>
+               </div>
+           </div>
+       </div>
+       <div class="col-lg-9 col-md-9">
+           <div class="panel panel-default">
+               <div class="panel-heading">active plan   <button  ng-click="addPlan()" class="btn btn-success">new plan</button></div>
+               <div class="panel-body">
+                   <table class="table table-bordered">
+                       <thead>
+                       <tr>
+
+                           <th>name</th>
+                           <th>symbol</th>
+                           <th>strategy</th>
+                           <th>createDate</th>
+                           <th>status</th>
+                       </tr>
+
+                       </thead>
+                       <tbody>
+                       <tr>
+
+                           <td>name </td>
+                           <td>USDJPY </td>
+                           <th>strategy1</th>
+                           <td>2015-10-10</td>
+                           <td>open</td>
+                       </tr>
+                       <tr>
+
+                           <td>name </td>
+                           <td>USDJPY </td>
+                           <th>strategy1</th>
+                           <td>2015-10-10</td>
+                           <td>open</td>
+                       </tr>
+                       <tr>
+
+                           <td>name </td>
+                           <td>USDJPY </td>
+                           <th>strategy1</th>
+                           <td>2015-10-10</td>
+                           <td>open</td>
+                       </tr>
+                       <tr>
+
+                           <td>name </td>
+                           <td>USDJPY </td>
+                           <th>strategy1</th>
+                           <td>2015-10-10</td>
+                           <td>open</td>
+                       </tr>
+                       <tr>
+
+                           <td>name </td>
+                           <td>USDJPY </td>
+                           <th>strategy1</th>
+                           <td>2015-10-10</td>
+                           <td>open</td>
+                       </tr>
+
+                       </tbody>
+                   </table>
+               </div>
+           </div>
+       </div>
+
+   </div>
+
+   <div class="row">
+       <div class="panel-default panel">
+           <div class="panel-heading">statistic</div>
            <div class="panel-body"></div>
        </div>
    </div>
-    <div class="row">
-        <div class="panel panel-default">
-            <div class="panel-heading">plan statics</div>
-            <div class="panel-body"></div>
-        </div>
-    </div>
-
 </div>
